fixed z-index for header and corrected centering for container in portfolio

--- a/dest/css/main.css
+++ b/dest/css/main.css
@@ -751,15 +751,9 @@ p[class^='copyright'] {
     -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
             flex-wrap: wrap;
-    -webkit-align-content: space-between;
-        -ms-flex-line-pack: justify;
-            align-content: space-between;
-    -webkit-box-pack: space-evenly;
-    -webkit-justify-content: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
     width: 100%;
     height: 100%;
+    margin: 0 auto;
 }
 
 .portfolio__item {
@@ -1080,6 +1074,7 @@ p[class^='copyright'] {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 10;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -1109,6 +1104,7 @@ p[class^='copyright'] {
 }
 
 .content {
+    position: relative;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
