--- a/src/sass/components/_portfolio.scss
+++ b/src/sass/components/_portfolio.scss
@@ -1,10 +1,9 @@
 .portfolio {
     display: flex;
     flex-wrap: wrap;
-    align-content: space-between;
-    justify-content: space-evenly;
     width: 100%;
     height: 100%;
+    margin: 0 auto;
 
     &__item {
         display: flex;
